[tool.poetry]
name = "pdf-generator"
version = "0.1.0"
description = "Generate and edit pdfs."
authors = ["ErkamKumru"]
readme = "README.md"
packages = [{include = "pdf_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
pypdf2 = "^3.0.1"
reportlab = "^3.6.12"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
